--- a/public/html/client.html
+++ b/public/html/client.html
@@ -112,6 +112,8 @@
 
     function openChat() {
       chat.style.display = "block";
+      document.getElementById("btn_support").style.display = 'none'
+
     }
 
     function closeChat() {
